Navbar no longer covers the destinations of internal links on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,24 @@ body, html {
       padding: 0;
       font-family: 'Ropa Sans', sans-serif;
 }
-
-
 @import url('https://fonts.googleapis.com/css?family=Ropa+Sans:400,400i&display=swap');
 
-/* .container {
-    margin: 0;
-} */
+
+/* This class accompanies all internal links to the page, preventing the destination of these from being partially covered by the navbar */
+.scroll-to {
+    position: relative;
+    margin-top: -100px;
+    height: 100px;
+}
+
+
+
+
+
+#the-band {
+    margin-top: 100vh;
+}
+
 
 
 
@@ -39,7 +50,6 @@ body, html {
 
 .one {
     background-image: url("../images/opening.jpg");
-
 }
 
 .two {
@@ -70,13 +80,14 @@ body, html {
 
 
 #the-band {
-    margin-top: 100vh;
+
+    
 }
 
 .hoof {
     /* Aggiungere descrizione, non si può mettere come margin top in section? */
     
-    height: 100px;
+
 }
 
 
